--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "ci": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
