--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Start containers 
-        run: docker-compose up -d --build
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Setup docker compose
+        uses: yu-ichiro/spin-up-docker-compose-action@v1
+        with:
+            file: docker-compose.yml
